samples/_failures_safe/1761633312_a59043_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09c42798.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_09c42798.c:129:5: error: expected expression at end of input
  129 |     if (analyzer == NULL || level == NULL) return
      |     ^~
./samples/SAFE/__tmp_09c42798.c:129:5: error: expected declaration or statement at end of input
